# matrix-sdk-python

./: .gitattributes  .gitignore  MANIFEST.in  README.md  build_backend.py  pyproject.toml  setup.py
.github/workflows/: python-bindings.yml  python-docs.yml
docs/: api.rst  conf.py  index.rst  usage.rst
scripts/: build_bindings.py  build_docs.py
src/matrix_sdk_python/: __init__.py  py.typed
src/matrix_sdk_python/_generated/: __init__.py
tests/: test_smoke.py
